--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@ local.properties
 
 # OS X
 .DS_Store
+
+# Xcode
+**/*.pbxuser
+**/*.mode1v3
+**/*.mode2v3
+**/*.perspectivev3
+**/*.xcuserstate
+**/*.xcbkptlist
+
+**/xcuserdata/
